# proxy-fmu

./: .clang-format  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt  run_conan_install.sh
.github/workflows/: build-and-test.yml  build.yml  config.yml  upload-conan-pkgs.yml  upload.yml
cmake/: FindCLI11.cmake  FindFMILIB.cmake  FindFMILibrary.cmake  FindFMILibrary_.cmake  FindFmilibcpp.cmake  FindLIBZIP.cmake  FindTHRIFT.cmake  conan.cmake  project-config.cmake.in
data/thrift/: generate_thrift.sh
examples/: CMakeLists.txt  example_util.hpp  fmi_test.cpp  proxy_test.cpp
examples/client/: demo.cpp
examples/fmi/: benchmark.cpp  fmi_test.cpp  test.cpp  test2.cpp
examples/thrift/: client_test.cpp  thrift_client_test.cpp  thrift_server_test.cpp
include/fmi/: fmu.hpp  model_description.hpp  scalar_variable.hpp  slave.hpp
include/fmuproxy/fmi/: fmu.hpp  model_description.hpp  scalar_variable.hpp  slave.hpp
include/fmuproxy/thrift/client/: proxy_client.hpp  proxy_fmu.hpp  remote_fmu_slave.hpp  thrift_client.hpp
include/fmuproxy/thrift/common/: fmu_service.h  service_types.h
include/fmuproxy/thrift/server/: fmu_server.hpp  fmu_service_handler.hpp  thrift_fmu_server.hpp
include/proxyfmu/: fixed_range_random_generator.hpp  fs_portability.hpp  lib_info.hpp  remote.hpp  remote_info.hpp  state.hpp  temp_dir.hpp
include/proxyfmu/client/: proxy_fmu.hpp
include/proxyfmu/fmi/: fmu.hpp  model_description.hpp  scalar_variable.hpp  slave.hpp
include/proxyfmu/server/: boot_service_handler.hpp  fmu_service_handler.hpp
src/: CMakeLists.txt
src/fmi/: fmicontext.hpp  fmu.cpp  simple_id.hpp  temp_dir.hpp  uuid.cpp  uuid.hpp
src/fmi/fmi1/: fmi1_fmu.cpp  fmi1_fmu.hpp  fmi1_model_description.cpp  fmi1_model_description.hpp  fmi1_slave.cpp  fmi1_slave.hpp
src/fmi/fmi2/: fmi2_fmu.cpp  fmi2_fmu.hpp  fmi2_model_description.cpp  fmi2_model_description.hpp  fmi2_slave.cpp  fmi2_slave.hpp
src/fmuproxy/fmi/: fmicontext.hpp  fmu.cpp
src/fmuproxy/fmi/fmi1/: fmi1_fmu.cpp  fmi1_fmu.hpp  fmi1_model_description.cpp  fmi1_model_description.hpp  fmi1_slave.cpp  fmi1_slave.hpp
src/fmuproxy/fmi/fmi2/: fmi2_fmu.cpp  fmi2_fmu.hpp  fmi2_model_description.cpp  fmi2_model_description.hpp  fmi2_slave.cpp  fmi2_slave.hpp
src/fmuproxy/thrift/: defs.thrift  service.thrift  service_starter.thrift
src/fmuproxy/thrift/client/: helper.hpp  proxy_client.cpp  proxy_fmu.cpp  remote_fmu_slave.cpp  remote_slave.cpp  remote_slave.hpp  thrift_client.cpp  thrift_client_helper.hpp  thrift_helper.hpp
src/fmuproxy/thrift/common/: fmu_service.cpp  service_types.cpp
src/fmuproxy/thrift/server/: fmu_server.cpp  fmu_service_handler.cpp  helper.hpp  thrift_fmu_server.cpp  thrift_helper.hpp  thrift_server_helper.hpp
src/fmuproxy/util/: file_util.hpp  simple_id.hpp  temp_dir.hpp
src/proxyfmu/: file_util.hpp  lib_info.cpp.in  port_range.hpp  process_helper.hpp
src/proxyfmu/client/: proxy_fmu.cpp  proxy_slave.cpp  proxy_slave.hpp  remote_slave.cpp  remote_slave.hpp
src/proxyfmu/fmi/: fmicontext.hpp  fmu.cpp
src/proxyfmu/fmi/fmi1/: fmi1_fmu.cpp  fmi1_fmu.hpp  fmi1_model_description.cpp  fmi1_model_description.hpp  fmi1_slave.cpp  fmi1_slave.hpp
src/proxyfmu/fmi/fmi2/: fmi2_fmu.cpp  fmi2_fmu.hpp  fmi2_model_description.cpp  fmi2_model_description.hpp  fmi2_slave.cpp  fmi2_slave.hpp
src/proxyfmu/server/: boot_service_handler.cpp  fmu_service_handler.cpp
src/proxyfmu/thrift/: boot.thrift  defs.thrift  service.thrift
src/proxyfmu/util/: file_util.hpp  temp_dir.hpp
src/thrift/: CMakeLists.txt  defs.thrift  service.thrift
tests/: CMakeLists.txt  data_dir.hpp  test_controlled_temp.cpp  test_identity.cpp  test_mass-spring-damper.cpp
thrift/: CMakeLists.txt
tool/: CMakeLists.txt  fmu_proxy.cpp  fmu_proxy_starter.cpp  fmu_service_handler.hpp  proxy_fmu.cpp  proxy_fmu_booter.cpp  proxyfmu.cpp  proxyfmu_booter.cpp
tool/booter/: CMakeLists.txt  boot_service_handler.hpp  proxyfmu_booter.cpp
tool/handlers/: boot_service_handler.cpp  boot_service_handler.hpp  fmu_service_handler.cpp  fmu_service_handler.hpp
